--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-baseurl: '/jekyll-serif-theme-test02
+baseurl: '/jekyll-serif-theme-test02'
 permalink: pretty
 title: 'Jekyll Serif Theme Test02'
 
